tests/purs/failing/TransitiveKindExport.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TransitiveKindExport.purs:2:1 - 6:39 (line 2, column 1 - line 6, column 39)

  An export for [33mTestProxy[0m requires the following to also be exported:

    [33mTest[0m



See https://github.com/purescript/documentation/blob/master/errors/TransitiveExportError.md for more information,
or to contribute content related to this error.

